After File Reconfiguration

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -5,9 +5,9 @@
   <title>Its Sew Regina - About Us</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/aboutuss.css" rel="stylesheet">
+  <link href="/static/css/aboutus.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.6/dist/purify.min.js"></script>
-  <script src="scripts/aboutus.js" defer></script>
+  <script src="static/js/aboutus.js" defer></script>
   <style>
   </style>
 </head>
@@ -21,7 +21,7 @@
 
     <div class="bvn-logobar">
     <a href="/" class="logo">
-      <img src="images/itssewlogo.png"alt="Its Sew Regina Home" >
+      <img src="static/images/itssewlogo.png"alt="Its Sew Regina Home" >
     </a>
       <h1>Its Sew Regina</h1>
       <button class='hamburger-icon'aria-label="Open menu" aria-expanded="false" aria-controls="main-menu"></button>
@@ -31,24 +31,22 @@
 
 
 
-
     <nav aria-label="Main navigation" class="menu-mobile">
 
-      <!--navigation list items-->
       <ul class="navigation-menu" role="main-menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="aboutus.html">About Us</a></li>
-        <li><a href="foru.html">For You</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/gallery">Gallery</a></li>
+        <li><a href="/aboutus">About Us</a></li>
+        <li><a href="/foru">For You</a></li>
       </ul>
 
-      
       <ol id="top-nav" >
-      <a href="index.html">Home</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="aboutus.html">About Us</a>
-      <a href="foru.html">For you</a>
+      <a href="/">Home</a>
+      <a href="/gallery">Gallery</a>
+      <a href="/aboutus">About Us</a>
+      <a href="/foru">For you</a>
       
+      </ol>
     </nav>
 
 
@@ -170,16 +168,16 @@ Open Cart
         </table>
       </div>
       <div id="social-links">
-        <a href="http://facebook.com/html"><img class="social1" src="images/SVG/facebook.svg"></a>
-        <a href="http://linkedin.com/html"><img class="social2" src="images/SVG/linkedin.svg"></a>
-        <a href="http://pinterest.com/html"><img class="social3" src="images/SVG/pinterest.svg"></a>
+        <a href="http://facebook.com/html"><img class="social1" src="/static/images/SVG/facebook.svg"></a>
+        <a href="http://linkedin.com/html"><img class="social2" src="/static/images/SVG/linkedin.svg"></a>
+        <a href="http://pinterest.com/html"><img class="social3" src="/static/images/SVG/pinterest.svg"></a>
       </div>
       <nav class="footer-nav">
         <ol>
-          <a href="index.html">Home</a>
-          <a href="gallery.html">Gallery</a>
-          <a href="aboutus.html">About Us</a>
-          <a href="foru.html">For you</a>
+          <a href="/">Home</a>
+          <a href="/gallery">Gallery</a>
+          <a href="/aboutus">About Us</a>
+          <a href="/foru">For you</a>
         </ol>
       </nav>
       <form class="footer-subscribe" action="">
@@ -189,9 +187,9 @@ Open Cart
       </form>
     </div>
   </footer>
-  <script src="scripts/modal.js"></script>
-  <script src="scripts/cart.js"></script>
-  <script src="scripts/main.js"></script>
+  <script src="/static/js/modal.js"></script>
+  <script src="/static/js/cart.js"></script>
+  <script src="/static/js/main.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://kit.fontawesome.com/668995576d.js" crossorigin="anonymous"></script>
 </body>
