--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
   <title>Its Sew Regina - home</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/index.css" rel="stylesheet">
-  <script type="module" src="scripts/index.js" defer></script>
+  <link href="/static/css/index.css" rel="stylesheet">
+  <script type="module" src="/static/js/index.js " defer></script>
   <style>
   
   
@@ -19,7 +19,7 @@
     
 <div class="bvn-logobar">
 <a href="/" class="logo">
-  <img src="images/itssewlogo.png"alt="Its Sew Regina Home" >
+  <img src="/static/images/itssewlogo.png" alt="Its Sew Regina Home" >
 </a>
 <!--Business Name-->
 <h1 >Its Sew Regina</h1>
@@ -30,24 +30,23 @@ aria-controls="main-menu">
 </button>
    </div>
 
-   <nav aria-label="Main navigation" class="menu-mobile">
-   
-   <!--navigation list items-->
-   <ul class="navigation-menu" id="main-menu" >
-   <li><a href="index.html">Home</a></li>
-   <li><a href="gallery.html">Gallery</a></li>
-   <li><a href="aboutus.html">About Us</a></li>
-   <li><a href="foru.html">For You</a></li>
-  </ul>
+    <nav aria-label="Main navigation" class="menu-mobile">
 
-  <ol id="top-nav" >
-  <a href="index.html">Home</a>
-  <a href="gallery.html">Gallery</a>
-  <a href="aboutus.html">About Us</a>
-  <a href="foru.html">For you</a>
-  
-  </ol>
-</nav>
+      <ul class="navigation-menu" role="main-menu">
+        <li><a href="/">Home</a></li>
+        <li><a href="/gallery">Gallery</a></li>
+        <li><a href="/aboutus">About Us</a></li>
+        <li><a href="/foru">For You</a></li>
+      </ul>
+
+      <ol id="top-nav" >
+      <a href="/">Home</a>
+      <a href="/gallery">Gallery</a>
+      <a href="/aboutus">About Us</a>
+      <a href="/foru">For you</a>
+      
+      </ol>
+    </nav>
 
 </header>
 <main>
@@ -80,11 +79,11 @@ Open Cart
     <div class="special-items-container">
       <figure class="special-product">
         <figcaption>Small Pillow</figcaption>
-        <img src="images/products/cowboyssplw1.1.webp" alt="potting soil"  >
+        <img src="/static/images/products/cowboyssplw1.1.webp" alt="potting soil"  >
       </figure>
       <figure class="special-product">
         <figcaption>Phone Stand</figcaption>
-        <img src="images/products/cowboysps1.1.webp" alt="watering can" >
+        <img src="/static/images/products/cowboysps1.1.webp" alt="watering can" >
       </figure>
     </div>
 
@@ -106,20 +105,20 @@ Open Cart
 
         <figure class="bundle-deal">
           <figcaption>stealers +</figcaption>
-          <img src="images/products/stealersps1.1.webp"
+          <img src="/static/images/products/stealersps1.1.webp"
                 alt="potting soil" width="200px">
         </figure>
         
         <figure class="bundle-deal">
           <figcaption>stand +</figcaption>
-          <img src="images/products/cowboyssp2.1.webp"
+          <img src="/static/images/products/cowboyssp2.1.webp"
                 alt="watering can" width="200px">
 
         </figure>
       </div>
         <figure class="bundle-deal">
           <figcaption>purse</figcaption>
-          <img src="images/products/smallpurse1.webp"
+          <img src="/static/images/products/smallpurse1.webp"
                 alt="aloe plant" width="200px">
 
         </figure>
@@ -197,28 +196,28 @@ Open Cart
   <button id="close-category" >Close</button>
           <div class="category">
             <a
-              href="gallery.html"><img class="tree-category" src="images/products/cowboysps1.1.webp" alt="click here for birch tree description"></a>
+              href="/gallery"><img class="tree-category" src="/static/images/products/cowboysps1.1.webp" alt="click here for birch tree description"></a>
             <a
-              href="gallery.html"><img class="tree-category" src="images/products/stealersps1.1.webp" alt="click here for maple trees description"></a>
-            <a href="gallery.html"><img  class="tree-category" src="images/products/sportspsdemo1.webp" alt="click here for apple trees description"></a>
+              href="/gallery"><img class="tree-category" src="/static/images/products/stealersps1.1.webp" alt="click here for maple trees description"></a>
+            <a href="/gallery"><img  class="tree-category" src="/static/images/products/sportspsdemo1.webp" alt="click here for apple trees description"></a>
           </div>
           <div class="category">
             <a
-              href="gallery.html"><img class="plant-category" src="images/products/afroculturelgb1.1.webp" alt="click here for string of peerls plant description"></a>
+              href="/gallery"><img class="plant-category" src="/static/images/products/afroculturelgb1.1.webp" alt="click here for string of peerls plant description"></a>
             <a
-              href="gallery.html"><img class="plant-category" src="images/products/tanafrolgb2.1.webp" alt="click here for the spider plant description"></a>
+              href="/gallery"><img class="plant-category" src="/static/images/products/tanafrolgb2.1.webp" alt="click here for the spider plant description"></a>
             <a
-              href="gallery.html"><img class="plant-category" src="images/products/smallpurse1.webp" alt="click here for aloe plants description"></a>
+              href="/gallery"><img class="plant-category" src="/static/images/products/smallpurse1.webp" alt="click here for aloe plants description"></a>
           </div>
           <div class="category">
             <a
-              href="gallery.html"><img class="equipment-category" src="images/products/cowboyssp2.1.webp" alt="click here for wwatering can description"></a>
+              href="/gallery"><img class="equipment-category" src="/static/images/products/cowboyssp2.1.webp" alt="click here for wwatering can description"></a>
             <a
-              href="gallery.html"><img class="equipment-category" src="images/products/cowboyslgplw2.1.webp" alt="click here for birdhouse's description"></a>
+              href="/gallery"><img class="equipment-category" src="/static/images/products/cowboyslgplw2.1.webp" alt="click here for birdhouse's description"></a>
             <a
-              href="gallery.html"><img class="equipment-category" src="images/products/smlpillowdemo1.1.webp" alt="click here for potting soil description"></a>
+              href="/gallery"><img class="equipment-category" src="/static/images/products/smlpillowdemo1.1.webp" alt="click here for potting soil description"></a>
           </div>
-          <button id="category-gallery"><a href="gallery.html">see gallery</a></button>
+          <button id="category-gallery"><a href="/gallery">see gallery</a></button>
 
         </div>
     </aside>
@@ -247,18 +246,18 @@ Open Cart
   </table>
   <div id="social-links">
     <a
-      href="http://facebook.com/html"><img aria-label="follow us on face book page"  class="social1" src="images/SVG/facebook.svg"></a>
+      href="http://facebook.com/html"><img aria-label="follow us on face book page"  class="social1" src="/static/images/SVG/facebook.svg"></a>
     <a
-      href="http://linkedin.com/html"><img aria-label="connect to our linked in profile "class="social2" src="images/SVG/linkedin.svg"></a>
+      href="http://linkedin.com/html"><img aria-label="connect to our linked in profile "class="social2" src="/static/images/SVG/linkedin.svg"></a>
     <a
-      href="http://pinterest.com/html"><img aria-label="click here to find our pinterest account " class="social3" src="images/SVG/pinterest.svg"></a>
+      href="http://pinterest.com/html"><img aria-label="click here to find our pinterest account " class="social3" src="/static/images/SVG/pinterest.svg"></a>
   </div>
   <nav class="footer-nav">
     <ol>
-      <a href="index.html">Home</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="aboutus.html">About Us</a>
-      <a href="foru.html">For you</a>
+      <a href="/index">Home</a>
+      <a href="/gallery">Gallery</a>
+      <a href="/aboutus">About Us</a>
+      <a href="/foru">For you</a>
     </ol>
     <form class="footer-subscribe" action="">
       <input type="email" name="email" id="emailToSubscribe" autocomplete="off" />
@@ -267,10 +266,10 @@ Open Cart
   </nav>
 </footer>
 </div>
-<script src="scripts/cart.js"></script>
-<script src="scripts/carousel.js" media="print"></script>
-<script src="scripts/modal.js" media="print"></script>
-<script src="scripts/main.js"></script>
+<script src="/static/js/cart.js" media="print"></script>
+<script src="/static/js/carousel.js" media="print"></script>
+<script src="/static/js/modal.js" media="print"></script>
+<script src="/static/js/main.js"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://kit.fontawesome.com/668995576d.js" crossorigin="anonymous"></script>
 </body>
