--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -5,7 +5,7 @@
   <title>Its Sew Regina - Gallery</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/gallery.css" rel="stylesheet">
+  <link href="/static/css/gallery.css" rel="stylesheet">
 
   <style>
 
@@ -19,7 +19,7 @@
 
     <div class="bvn-logobar">
     <a href="/" class="logo">
-      <img src="images/itssewlogo.png"alt="Its Sew Regina Home" >
+      <img src="/static/images/itssewlogo.png"alt="Its Sew Regina Home" >
     </a>
       <h1>Its Sew Regina</h1>
 
@@ -28,17 +28,17 @@
     <nav aria-label="Main navigation" class="menu-mobile">
 
       <ul class="navigation-menu" role="main-menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="aboutus.html">About Us</a></li>
-        <li><a href="foru.html">For You</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/gallery">Gallery</a></li>
+        <li><a href="/aboutus">About Us</a></li>
+        <li><a href="/foru">For You</a></li>
       </ul>
 
       <ol id="top-nav" >
-      <a href="index.html">Home</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="aboutus.html">About Us</a>
-      <a href="foru.html">For you</a>
+      <a href="/">Home</a>
+      <a href="/gallery">Gallery</a>
+      <a href="/aboutus">About Us</a>
+      <a href="/foru">For you</a>
       
       </ol>
     </nav>
@@ -97,16 +97,16 @@
 
     <nav class="footer-nav">
       <div id="social-links">
-        <a href="http://facebook.com/html"><img class="social1" src="images/SVG/facebook.svg"></a>
-        <a href="http://linkedin.com/html"><img class="social2" src="images/SVG/linkedin.svg"></a>
-        <a href="http://pinterest.com/html"><img class="social3" src="images/SVG/pinterest.svg"></a>
+        <a href="http://facebook.com/html"><img class="social1" src="/static/images/SVG/facebook.svg"></a>
+        <a href="http://linkedin.com/html"><img class="social2" src="/static/images/SVG/linkedin.svg"></a>
+        <a href="http://pinterest.com/html"><img class="social3" src="/static/images/SVG/pinterest.svg"></a>
       </div>
       <nav class="footer-nav">
         <ol>
-          <a href="index.html">Home</a>
-          <a href="gallery.html">Gallery</a>
-          <a href="aboutus.html">About Us</a>
-          <a href="foru.html">For you</a>
+          <a href="/index">Home</a>
+          <a href="/gallery">Gallery</a>
+          <a href="/aboutus">About Us</a>
+          <a href="/foru">For you</a>
         </ol>
       </nav>
       <form class="footer-subscribe" action="">
@@ -116,10 +116,10 @@
       </form>
 
   </footer>
-  <script src="scripts/cart.js"></script>
-  <script src="gallery.js"></script>
-<script src="scripts/modal.js"></script>
-  <script src="scripts/main.js"></script>
+ <script src="/static/js/cart.js" media="print"></script>
+   <script src="/static/js/gallery.js"></script>
+<script src="/static/js/modal.js"></script>
+  <script src="/static/js/main.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://kit.fontawesome.com/668995576d.js" crossorigin="anonymous"></script>
 </body>
