--- a/templates/foru.html
+++ b/templates/foru.html
@@ -32,14 +32,14 @@
         <li><a href="/">Home</a></li>
         <li><a href="/gallery">Gallery</a></li>
         <li><a href="/aboutus">About Us</a></li>
-        <li><a href="/foru">For You</a></li>
+        <li><a href="/forum">For You</a></li>
       </ul>
 
       <ol id="top-nav" >
       <a href="/">Home</a>
       <a href="/gallery">Gallery</a>
       <a href="/aboutus">About Us</a>
-      <a href="/foru">For you</a>
+      <a href="/forum">For you</a>
       
       </ol>
     </nav>
@@ -604,7 +604,7 @@
           <a href="/">Home</a>
           <a href="/gallery">Gallery</a>
           <a href="/aboutus">About Us</a>
-          <a href="/foru">For you</a>
+          <a href="/forum">For you</a>
         </ol>
       </nav>
       <form class="footer-subscribe" action="">
