--- a/templates/index.html
+++ b/templates/index.html
@@ -36,14 +36,14 @@ aria-controls="main-menu">
         <li><a href="/">Home</a></li>
         <li><a href="/gallery">Gallery</a></li>
         <li><a href="/aboutus">About Us</a></li>
-        <li><a href="/foru">For You</a></li>
+        <li><a href="/forum">For You</a></li>
       </ul>
 
       <ol id="top-nav" >
       <a href="/">Home</a>
       <a href="/gallery">Gallery</a>
       <a href="/aboutus">About Us</a>
-      <a href="/foru">For you</a>
+      <a href="/forum">For you</a>
       
       </ol>
     </nav>
@@ -257,7 +257,7 @@ Open Cart
       <a href="/index">Home</a>
       <a href="/gallery">Gallery</a>
       <a href="/aboutus">About Us</a>
-      <a href="/foru">For you</a>
+      <a href="/forum">For you</a>
     </ol>
     <form class="footer-subscribe" action="">
       <input type="email" name="email" id="emailToSubscribe" autocomplete="off" />
