Adding rate limiting and Form submission endpoint

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -107,7 +107,7 @@ Open Cart
 
     <legend>Contact Us</legend>
 
-    <form action="process.php" method="POST" class="subToNewsletter" id="subToNewsletter" autocomplete="off">
+    <form id="custom-order-form"  class="subToNewsletter" id="subToNewsletter" autocomplete="off">
       <div>
         <div id="session-storage-submission"></div>
         <div id="result"></div>
