adjusting css minus 2 flask problems, no limit on form!

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -93,13 +93,15 @@ Open Cart
     <h1 class="h1">Here's the latest news!</h1>
 
 
-    <h3 class="h3">About Bloom Valley Nursery</h3>
-    <p id="aboutus">Bloom Valley Nursery operates as a local, family-owned plant nursery in the area, specializing in
-      the sale of a wide variety of plants, trees, and gardening supplies. It aims to connect with gardening enthusiasts
-      and homeowners in the community who share a passion for horticulture. While the client does not have an existing
-      website, it reflects the natural beauty through plant nursery and resonates with gardening enthusiasts in the
-      local
-      community.<br> As the client focuses on sustainability and creativity in its operations, the primary goal of the website is to enhance visibility in the local market, foster community engagement, and facilitate customer inquiries and orders.<br> Its target audience comprises local gardening enthusiasts and homeowners seeking high-quality plants and gardening supplies.
+    <h3 class="h3">About Its Sew Regina </h3>
+    <p id="aboutus">This is a website aims to provide a platform for artists in the cummunity that 
+      apply custom designs to various products and to provide the community acces to those products, 
+      some artists having limited inventories unable to have exposure on larger websites can be 
+      accomidated here<br> As the client focuses on sustainability and creativity in its operations, 
+      the primary goal of the website is to enhance visibility in the local market,
+       foster community engagement, and facilitate customer inquiries and orders.<br> 
+       Its target audience comprises local sewing enthusiasts and homeowners seeking high-quality 
+       custom designed products.
     </p>
 
 
