--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@ Open Cart
 
 
   <div class="special-card" id="promo-bundle">
-    <h3 id="special-header">New to Gardening?</h3>
+    <h3 id="special-header">On the Racks</h3>
     <h4> Try Our First time Bundle</h4>
     <div class="special-items-container">
       <figure class="special-product">
