--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,7 +18,8 @@
   --bg-muted: #1e2226;       /* subtle contrast */
   --text-main: #e6e6e6;
   --text-muted: #b5b5b5;
-
+  --brand-blonde: #f3e5e3; 
+  --blonde-accent: #ed6c26;
   --brand-pink: #e06aa3;
   --brand-green: #6fbf8f;
 
@@ -109,7 +110,7 @@ a:hover {
 
 button {
   background-color: transparent;
-  color: var(--text-main);
+  color: var(--bg-surface);
   border: 1px solid var(--border-soft);
   padding: 0.5rem 1rem;
   border-radius: 12px;
@@ -118,14 +119,14 @@ button {
 }  
 
 button:hover {
-  border-color: var(--brand-green);
+
   color: var(--brand-green);
 }  
 header{
-  background-color:var(--bg-main);
+  background-color:var(--brand-blonde);
   width: 100%;
-  padding: 7px;
-  border-bottom: 2px solid var(--brand-green);
+  padding: 2px;
+  border-bottom: 2px solid var(--bg-main);
 }  
 
 main {
@@ -152,7 +153,7 @@ figure {
   
 }  
 #top-nav a:hover{
-  color: var(--brand-pink);
+  color: var(--blonde-accent);
   font-weight: bolder;
 }  
 
@@ -167,7 +168,7 @@ figure {
 .logo {
   width: 100px;
   align-items: center;
-  gap: 4px;
+  gap: 2px;
 }  
 
 .logo img {
@@ -179,7 +180,7 @@ figure {
   background: none;
   border-radius: 4px; 
   cursor: pointer;
-  transition: background-color 0.2s ease-in-out;
+  transition: background-color 0.4s ease-in-out;
 
 }  
 
@@ -190,7 +191,7 @@ flex-direction: row;
   list-style: none;
   background-color: #f7f7f7; 
   border: 2px solid #014038; 
-  border-radius: 6px; 
+  border-radius: 4px; 
   font-size: 18px; 
   font-weight: bold; 
   font-family: Arial, sans-serif;
@@ -227,7 +228,7 @@ flex-direction: row;
 }   
 
 footer {
-  background-color: var(--bg-surface);
+  background-color: var(--brand-blonde);
   border-top: 1px solid var(--border-soft);
   margin-top: 3rem;
   padding: 2rem;
@@ -264,7 +265,7 @@ footer a:hover {
     #hours {
       
       background-color: #BDD4DA;
-      border: solid 2px #F0C06D;
+      border: solid 2px var(--blonde-accent);
       border-collapse: collapse;
       float: left;
       margin: 5px;
