--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <title>Its Sew Regina - home</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="/static/css/index.css" rel="stylesheet">
+  <link href="/static/css/index.css?v=1" rel="stylesheet">
   <script type="module" src="/static/js/index.js " defer></script>
   <style>
   
