--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -3,7 +3,7 @@
 
   #gallery-container{
     display: grid;
-    grid-template-columns:auto auto auto;
+     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   }
 
 
@@ -16,8 +16,8 @@
 
   #gallery-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-    max-width: min(98%);
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    max-width: 98%;
   }
 
   
@@ -27,7 +27,7 @@
 
 /* Base styles (shared) */
 #gallery-container{
-  background-color: #014038;
+  background-color: var(--bg-secondary);
   border-radius: 5px;
 }
 body{
@@ -42,9 +42,9 @@ body{
 }
 
 main{
-  gap: 4px;
-  max-width: 1200px;
-  padding: 2rem;
+  gap: 2px;
+  max-width: 99vw;
+  padding: 1rem;
   
 }
 
@@ -62,6 +62,13 @@ figure.product-media{
   align-items: center;
   
 }
+.product-image{
+  width: 100%;
+  object-fit: cover;
+  display: block;
+  height: 100%;
+  border: solid 2px #014038;
+} 
 
 figure.product-media img {
   width: 100%;
@@ -74,10 +81,10 @@ figure.product-media img {
 /* Caption styling (optional) */
 figure.product-media figcaption {
   color:  #00231C;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: bold;
   font-family: arial;
-  margin: 0.5;
+  margin: 4px 1px;
 }
 
 
