--- a/templates/foru.html
+++ b/templates/foru.html
@@ -5,7 +5,7 @@
   <title>Its Sew Regina - For You</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="static/css/foru.css" rel="stylesheet">
+  <link href="static/css/foru.css?v=2026-02-04" rel="stylesheet">
 
 
   <style>
@@ -14,35 +14,36 @@
 </head>
 
 <body>
-  <div id="status-region" role="status" aria-live="polite" class="visually-hidden"></div>
   <header>
-
+    
     <div class="bvn-logobar">
-    <a href="/" class="logo">
-      <img src="/static/images/itssewlogo.png"alt="Its Sew Regina Home" >
-    </a>
-      <!--Page header-->
-      <h1>Its Sew Regina</h1>
-      <button class="hamburger-icon"aria-label="Open menu" aria-expanded="false" aria-controls="main-menu" ></button>
-    </div>
-
-     <nav aria-label="Main navigation" class="menu-mobile">
-
-      <ul class="navigation-menu" role="main-menu">
-        <li><a href="/">Home</a></li>
-        <li><a href="/gallery">Gallery</a></li>
-        <li><a href="/aboutus">About Us</a></li>
-        <li><a href="/forum">For You</a></li>
-      </ul>
-
-      <ol id="top-nav" >
-      <a href="/">Home</a>
-      <a href="/gallery">Gallery</a>
-      <a href="/aboutus">About Us</a>
-      <a href="/forum">For you</a>
+      <a href="/" class="logo">
+        <img src="/static/images/itssewlogo.png" alt="Its Sew Regina Home" >
+      </a>
+      <!--Business Name-->
+      <h1 >Its Sew Regina</h1>
+      <!-- Live region for announcements -->
       
-      </ol>
-    </nav>
+      <nav aria-label="Main navigation" class="menu-mobile">
+        
+        <ul class="navigation-menu" role="main-menu">
+          <li><a href="/">Home</a></li>
+          <li><a href="/gallery">Gallery</a></li>
+          <li><a href="/aboutus">About Us</a></li>
+          <li><a href="/forum">For You</a></li>
+        </ul>
+        
+        <ol id="top-nav" >
+          <a href="/">Home</a>
+          <a href="/gallery">Gallery</a>
+          <a href="/aboutus">About Us</a>
+          <a href="/forum">For you</a>
+          
+        </ol>
+      </nav>
+    </div>
+    
+    
   </header>
   <main>
 
@@ -582,6 +583,13 @@
     <a href="#product-selection" id="to-product-selection"
       aria-label="Back to product selection list"><button>To Product Selection</button></a>
 
+      <div class="hero-group-container">
+<a class="hero-group-option"href="/">Home</a>
+<a class="hero-group-option"href="/gallery">Gallery</a>
+<a class="hero-group-option"href="/aboutus">About Us</a>
+<button class="hero-group-option" id="hamburger-icon" aria-label="Navigation menu" 
+aria-controls="main-menu"></button>
+</div>
   </main>
 
 
