--- a/templates/index.html
+++ b/templates/index.html
@@ -4,86 +4,81 @@
   <title>Its Sew Regina - home</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="/static/css/index.css?v=1" rel="stylesheet">
-  <script type="module" src="/static/js/index.js " defer></script>
+  <link href="/static/css/index.css?v=2026-02-04" rel="stylesheet">
+  <script type="module" src="/static/js/index.js?v=2026-02-04 " defer></script>
   <style>
   
   
 </style>
 </head>
 <body>
-  <!-- Live region for announcements -->
-<div id="status-region" role="status" aria-live="polite" class="visually-hidden"></div>
-
-<header>
+  
+  <header>
     
-<div class="bvn-logobar">
-<a href="/" class="logo">
-  <img src="/static/images/itssewlogo.png" alt="Its Sew Regina Home" >
-</a>
-<!--Business Name-->
-<h1 >Its Sew Regina</h1>
-<button 
-class="hamburger-icon" 
-aria-label="Navigation menu" 
-aria-controls="main-menu">
-</button>
-   </div>
-
-    <nav aria-label="Main navigation" class="menu-mobile">
-
-      <ul class="navigation-menu" role="main-menu">
-        <li><a href="/">Home</a></li>
-        <li><a href="/gallery">Gallery</a></li>
-        <li><a href="/aboutus">About Us</a></li>
-        <li><a href="/forum">For You</a></li>
-      </ul>
-
-      <ol id="top-nav" >
-      <a href="/">Home</a>
-      <a href="/gallery">Gallery</a>
-      <a href="/aboutus">About Us</a>
-      <a href="/forum">For you</a>
+    <div class="bvn-logobar">
+      <a href="/" class="logo">
+        <img src="/static/images/itssewlogo.png" alt="Its Sew Regina Home" >
+      </a>
+      <!--Business Name-->
+      <h1 >Its Sew Regina</h1>
+      <!-- Live region for announcements -->
       
-      </ol>
-    </nav>
-
-</header>
-<main>
+      <nav aria-label="Main navigation" class="menu-mobile">
+        
+        <ul class="navigation-menu" role="main-menu">
+          <li><a href="/">Home</a></li>
+          <li><a href="/gallery">Gallery</a></li>
+          <li><a href="/aboutus">About Us</a></li>
+          <li><a href="/forum">For You</a></li>
+        </ul>
+        
+        <ol id="top-nav" >
+          <a href="/">Home</a>
+          <a href="/gallery">Gallery</a>
+          <a href="/aboutus">About Us</a>
+          <a href="/forum">For you</a>
+          
+        </ol>
+      </nav>
+    </div>
+    
+    
+  </header>
+  <main>
+    <div id="modal-status-region" role="status" aria-live="polite" class="visually-hidden"></div>
+ 
     <!-- Cart Modal -->
     <div id="users-card">
    
-    <button id="open-cart" aria-haspopup="dialog" aria-controls="cart-modal">
-Open Cart
-</button>
+    <button id="open-cart"  aria-haspopup="dialog" aria-controls="cart-modal">Open cart
+    </button>
     <!-- Cart Modal -->
     <div id="modal" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="modal-title">
 
       <div class="modal-content" role="group">
         <button id="close-modal" class="close" aria-label="Close Modal">&times;</button>
         <h2 id="modal-title" tabindex="-1"></h2>
-        <div id="modal-status-region" role="status" aria-live="polite" class="visually-hidden"></div>
         <div id="modal-view-container" role="region" aria-labelledby="modal-title">
         </div>
         <div class="modal-actions">
         </div>
       </div>
     </div>
-    <div id="cart-total"></div>
+      <div id="cart-total"></div>
   </div>
 
 
   <div class="special-card" id="promo-bundle">
     <h3 id="special-header">On the Racks</h3>
-    <h4> Try Our First time Bundle</h4>
+    <h4> In stores now!!</h4>
     <div class="special-items-container">
       <figure class="special-product">
         <figcaption>Small Pillow</figcaption>
-        <img src="/static/images/products/cowboyssplw1.1.webp" alt="potting soil"  >
+        <img src="/static/images/products/sportspsdemo1.webp" alt="sports phone stands"  >
       </figure>
       <figure class="special-product">
         <figcaption>Phone Stand</figcaption>
-        <img src="/static/images/products/cowboysps1.1.webp" alt="watering can" >
+        <img src="/static/images/products/smlpillowdemo1.1.webp" alt="small pillow" >
       </figure>
     </div>
 
@@ -99,26 +94,26 @@ Open Cart
 
 
     <div class="starterpackage">
-      <h3>Starter's Package </h3>
+      <h3>Custom Made Items </h3>
     <div id="duo">
       <div class="bundle">
 
         <figure class="bundle-deal">
-          <figcaption>stealers +</figcaption>
-          <img src="/static/images/products/stealersps1.1.webp"
-                alt="potting soil" width="200px">
+          <figcaption>Afro Culture</figcaption>
+          <img src="/static/images/products/tanafrolgb2.1.webp"
+                alt="Custom made tan afro culture womens carry bag" width="200px">
         </figure>
         
         <figure class="bundle-deal">
           <figcaption>stand +</figcaption>
-          <img src="/static/images/products/cowboyssp2.1.webp"
-                alt="watering can" width="200px">
+          <img src="/static/images/products/afroculturelgb1.1.webp"
+                alt="Custom made afro culture carry bag " width="200px">
 
         </figure>
       </div>
         <figure class="bundle-deal">
           <figcaption>purse</figcaption>
-          <img src="/static/images/products/smallpurse1.webp"
+          <img src="/static/images/products/sportspsdemo2.webp"
                 alt="aloe plant" width="200px">
 
         </figure>
@@ -140,36 +135,30 @@ Open Cart
 
           <div class="slide">
             <div class="carousel-card-header">
-              <h3 id="topic">Spring sell</h3>
+              <h3 id="topic">Afro Culture</h3>
             </div>
             <div class="carousel-card-body ">
-              <p class="carousel-card-text">"We picked up a few aloe vera and spider plants during the nursery's spring
-                sale. The staff helped us choose beginner-friendly plants, and now our kitchen is full of life <br>-Neighborhood Resident-
-              </p>
+             <img src="/static/images/products/afroculturelgb1.1.webp" alt="">
             </div>
           </div>
 
 
           <div class="slide">
             <div class="carousel-card-header">
-              <h3>Day At The Park</h3>
+              <h3>Phone Stands</h3>
             </div>
             <div class="carousel-card-body">
-              <p class="carousel-card-text">"Every spring, [Nursery Name] co-hosts a free plant swap and garden day in
-                the park. They bring extra seedlings, free soil scoops, and host a 'Repotting 101' workshop for all
-                ages."<br>— Lina Chen, Local Volunteer Organize</p>
+           <img src="/static/images/products/sportspsdemo1.webp" alt="">
             </div>
           </div>
 
 
           <div class="slide">
             <div class="carousel-card-header">
-              <h3>Free Plant Swap</h3>
+              <h3>Sports Pillows</h3>
             </div>
             <div class="carousel-card-body">
-              <p class="carousel-card-text">donated herbs, succulents, and soil for our indoor gardening program. Our
-                seniors love tending to the plants and learning how to use herbs like rosemary and mint in tea."<br>— — Darla Nguyen, Program Director
-              </p>
+             <img src="/static/images/products/smlpillowdemo1.1.webp" alt="">
             </div>
           </div>
 
@@ -181,47 +170,57 @@ Open Cart
     </article>
     <aside>
       <div class="gallery-product-category">
-        <h3 class="topic">Growing In The Garden</h3>
+        <h3 class="topic">New Paterns</h3>
         <p>Press a selection to view by category</p>
         <div class="default-category" id="default-selection">
           <button class="main-category-select" id="show-equipment-category">
-    Equipment
+    Msc
   </button>
           <button class="main-category-select" id="show-tree-category">
-     Trees
+     Afro Culture
     </button>
           <button class="main-category-select" id="show-plant-category">
-    Plants
+   Sports
   </div>
   <button id="close-category" >Close</button>
           <div class="category">
             <a
-              href="/gallery"><img class="tree-category" src="/static/images/products/cowboysps1.1.webp" alt="click here for birch tree description"></a>
+              href="/gallery"><img class="tree-category" src="/static/images/products/afroculturelgb1.1.webp" alt="click here for birch tree description"></a>
             <a
-              href="/gallery"><img class="tree-category" src="/static/images/products/stealersps1.1.webp" alt="click here for maple trees description"></a>
-            <a href="/gallery"><img  class="tree-category" src="/static/images/products/sportspsdemo1.webp" alt="click here for apple trees description"></a>
+              href="/gallery"><img class="tree-category" src="/static/images/products/tanafrolgb2.1.webp" alt="click here for maple trees description"></a>
+            <a href="/gallery"><img  class="tree-category" src="/static/images/products/afroculturelgb1.1.webp" alt="click here for apple trees description"></a>
           </div>
           <div class="category">
             <a
-              href="/gallery"><img class="plant-category" src="/static/images/products/afroculturelgb1.1.webp" alt="click here for string of peerls plant description"></a>
+              href="/gallery"><img class="plant-category" src="/static/images/products/stealersps1.1.webp" alt="click here for string of peerls plant description"></a>
             <a
-              href="/gallery"><img class="plant-category" src="/static/images/products/tanafrolgb2.1.webp" alt="click here for the spider plant description"></a>
+              href="/gallery"><img class="plant-category" src="/static/images/products/cowboyslgplw2.1.webp" alt="click here for the spider plant description"></a>
             <a
-              href="/gallery"><img class="plant-category" src="/static/images/products/smallpurse1.webp" alt="click here for aloe plants description"></a>
+              href="/gallery"><img class="plant-category" src="/static/images/products/sportspsdemo2.webp" alt="click here for aloe plants description"></a>
           </div>
           <div class="category">
             <a
-              href="/gallery"><img class="equipment-category" src="/static/images/products/cowboyssp2.1.webp" alt="click here for wwatering can description"></a>
+              href="/gallery"><img class="equipment-category" src="/static/images/products/afroculturelgb1.1.webp" alt="click here for wwatering can description"></a>
             <a
-              href="/gallery"><img class="equipment-category" src="/static/images/products/cowboyslgplw2.1.webp" alt="click here for birdhouse's description"></a>
+              href="/gallery"><img class="equipment-category" src="/static/images/products/smlpillowdemo1.1.webp" alt="click here for birdhouse's description"></a>
             <a
-              href="/gallery"><img class="equipment-category" src="/static/images/products/smlpillowdemo1.1.webp" alt="click here for potting soil description"></a>
+              href="/gallery"><img class="equipment-category" src="/static/images/products/cowboysps1.1.webp" alt="click here for potting soil description"></a>
           </div>
           <button id="category-gallery"><a href="/gallery">see gallery</a></button>
 
         </div>
     </aside>
   </div>
+
+<div class="hero-group-container">
+<a class="hero-group-option"href="/">Home</a>
+<a class="hero-group-option"href="/gallery">Gallery</a>
+<a class="hero-group-option"href="/aboutus">About Us</a>
+<button class="hero-group-option" id="hamburger-icon" aria-label="Navigation menu" 
+aria-controls="main-menu"></button>
+</div>
+
+  
 </main>
 <footer>
   <table id="hours">
@@ -254,7 +253,7 @@ Open Cart
   </div>
   <nav class="footer-nav">
     <ol>
-      <a href="/index">Home</a>
+      <a href="/">Home</a>
       <a href="/gallery">Gallery</a>
       <a href="/aboutus">About Us</a>
       <a href="/forum">For you</a>
@@ -266,10 +265,10 @@ Open Cart
   </nav>
 </footer>
 </div>
-<script src="/static/js/cart.js" media="print"></script>
-<script src="/static/js/carousel.js" media="print"></script>
-<script src="/static/js/modal.js" media="print"></script>
-<script src="/static/js/main.js"></script>
+<script src="/static/js/cart.js?v=2026-02-04" media="print"></script>
+<script src="/static/js/carousel.js?v=2026-02-04" media="print"></script>
+<script src="/static/js/modal.js?v=2026-02-04" media="print"></script>
+<script src="/static/js/main.js?v=2026-02-04"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://kit.fontawesome.com/668995576d.js" crossorigin="anonymous"></script>
 </body>
