--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
   <title>Its Sew Regina - home</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="/static/css/index.css?v=2026-02-04" rel="stylesheet">
-  <script type="module" src="/static/js/index.js?v=2026-02-04 " defer></script>
+  <link href="/static/css/index.css?v=2026-02-05" rel="stylesheet">
+  <script type="module" src="/static/js/index.js?v=2026-02-05 " defer></script>
   <style>
   
   
@@ -49,12 +49,10 @@
  
     <!-- Cart Modal -->
     <div id="users-card">
-   
     <button id="open-cart"  aria-haspopup="dialog" aria-controls="cart-modal">Open cart
     </button>
     <!-- Cart Modal -->
     <div id="modal" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="modal-title">
-
       <div class="modal-content" role="group">
         <button id="close-modal" class="close" aria-label="Close Modal">&times;</button>
         <h2 id="modal-title" tabindex="-1"></h2>
@@ -89,84 +87,20 @@
     <span class="price" id="special-price">$21.02</span>
   </div>
 
-
-  <section>
-
-
-    <div class="starterpackage">
-      <h3>Custom Made Items </h3>
-    <div id="duo">
-      <div class="bundle">
-
-        <figure class="bundle-deal">
-          <figcaption>Afro Culture</figcaption>
-          <img src="/static/images/products/tanafrolgb2.1.webp"
-                alt="Custom made tan afro culture womens carry bag" width="200px">
-        </figure>
-        
-        <figure class="bundle-deal">
-          <figcaption>stand +</figcaption>
-          <img src="/static/images/products/afroculturelgb1.1.webp"
-                alt="Custom made afro culture carry bag " width="200px">
-
-        </figure>
-      </div>
-        <figure class="bundle-deal">
-          <figcaption>purse</figcaption>
-          <img src="/static/images/products/sportspsdemo2.webp"
-                alt="aloe plant" width="200px">
-
-        </figure>
-
-      </div>
-      <button class="add-starter-package" data-id="bundle-starter"><i class="fa-solid fa-cart-plus"></i>Add to cart</button>
-      <span class="price" id="starter-price" alt="Starter package price">$29.99</span>
-    </div>
-
-    <p id="discount"><strong>Members Discount !!</strong><br>Existing members get a 30% discount on forth in-store visit
-    </p>
-  </section>
-
   <div class="aside-article-container">
 
     <article>
-      <div class="carousel">
+      <div class="carousel" data-carousel id="home-carousel-demo">
         <div class="carousel-track">
 
-          <div class="slide">
-            <div class="carousel-card-header">
-              <h3 id="topic">Afro Culture</h3>
-            </div>
-            <div class="carousel-card-body ">
-             <img src="/static/images/products/afroculturelgb1.1.webp" alt="">
-            </div>
-          </div>
-
-
-          <div class="slide">
-            <div class="carousel-card-header">
-              <h3>Phone Stands</h3>
-            </div>
-            <div class="carousel-card-body">
-           <img src="/static/images/products/sportspsdemo1.webp" alt="">
-            </div>
-          </div>
-
-
-          <div class="slide">
-            <div class="carousel-card-header">
-              <h3>Sports Pillows</h3>
-            </div>
-            <div class="carousel-card-body">
-             <img src="/static/images/products/smlpillowdemo1.1.webp" alt="">
-            </div>
-          </div>
+    
 
         </div>
 
-        <button class="carousel-btn prev" >&#10094;</button>
-        <button class="carousel-btn next">&#10095;</button>
+       
       </div>
+      <div class="carousel-dots" data-dots></div>
+
     </article>
     <aside>
       <div class="gallery-product-category">
@@ -211,6 +145,44 @@
         </div>
     </aside>
   </div>
+  <section>
+
+
+    <div class="starterpackage">
+      <h3>Custom Made Items </h3>
+    <div id="duo">
+      <div class="bundle">
+
+        <figure class="bundle-deal">
+          <figcaption>Afro Culture</figcaption>
+          <img src="/static/images/products/tanafrolgb2.1.webp"
+                alt="Custom made tan afro culture womens carry bag" width="200px">
+        </figure>
+        
+        <figure class="bundle-deal">
+          <figcaption>stand +</figcaption>
+          <img src="/static/images/products/afroculturelgb1.1.webp"
+                alt="Custom made afro culture carry bag " width="200px">
+
+        </figure>
+      </div>
+        <figure class="bundle-deal">
+          <figcaption>purse</figcaption>
+          <img src="/static/images/products/sportspsdemo2.webp"
+                alt="aloe plant" width="200px">
+
+        </figure>
+
+      </div>
+      <button class="add-starter-package" data-id="bundle-starter"><i class="fa-solid fa-cart-plus"></i>Add to cart</button>
+      <span class="price" id="starter-price" alt="Starter package price">$29.99</span>
+    </div>
+
+    <p id="discount"><strong>Members Discount !!</strong><br>Existing members get a 30% discount on forth in-store visit
+    </p>
+  </section>
+
+
 
 <div class="hero-group-container">
 <a class="hero-group-option"href="/">Home</a>
@@ -265,10 +237,10 @@ aria-controls="main-menu"></button>
   </nav>
 </footer>
 </div>
-<script src="/static/js/cart.js?v=2026-02-04" media="print"></script>
-<script src="/static/js/carousel.js?v=2026-02-04" media="print"></script>
-<script src="/static/js/modal.js?v=2026-02-04" media="print"></script>
-<script src="/static/js/main.js?v=2026-02-04"></script>
+<script src="/static/js/cart.js?v=2026-02-05" media="print"></script>
+<script src="/static/js/carousel.js?v=2026-02-05" media="print"></script>
+<script src="/static/js/modal.js?v=2026-02-05" media="print"></script>
+<script src="/static/js/main.js?v=2026-02-05"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://kit.fontawesome.com/668995576d.js" crossorigin="anonymous"></script>
 </body>
