--- a/templates/foru.html
+++ b/templates/foru.html
@@ -5,7 +5,7 @@
   <title>Its Sew Regina - For You</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="static/css/foru.css?v=2026-02-04" rel="stylesheet">
+  <link href="static/css/foru.css?v=2026-02-05" rel="stylesheet">
 
 
   <style>
@@ -70,7 +70,18 @@
    </div>
 
 
+<div  class="hero-section">
+<div class="carousel" 
+data-carousel
+data-variant="hero"
+id="demo-carousel-hero">
+  <div class="carousel-track">
+   
+  </div>
+</div>
+<div class="carousel-dots" data-dots></div>
 
+</div>
 
 
     <h2>Planting Guides and Care tips</h2>
@@ -622,6 +633,7 @@ aria-controls="main-menu"></button>
       </form>
 
   </footer>'
+  <script src="/static/js/carousel.js"></script>
   <script src="/static/js/cart.js"></script>
   <script src="/static/js/modal.js"></script>
   <script src="/static/js/main.js"></script>
