--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -5,7 +5,7 @@
   <title>Its Sew Regina - Gallery</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="/static/css/gallery.css?v=2026-02-04" rel="stylesheet">
+  <link href="/static/css/gallery.css?v=2026-02-05" rel="stylesheet">
 
   <style>
 
@@ -122,7 +122,7 @@ aria-controls="main-menu"></button>
 
   </footer>
  <script src="/static/js/cart.js" media="print"></script>
-   <script src="/static/js/gallery.js"></script>
+   <script src="/static/js/gallery.js?v=2026-02-05"></script>
 <script src="/static/js/modal.js"></script>
   <script src="/static/js/main.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
