--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,7 @@
     </article>
     <aside>
       <div class="gallery-product-category">
-        <h3 class="topic">New Paterns</h3>
+        <h3 class="topic">New Patterns</h3>
         <p>Press a selection to view by category</p>
         <div class="default-category" id="default-selection">
           <button class="main-category-select" id="show-equipment-category">
