--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -16,8 +16,8 @@
 
   #gallery-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    max-width: 98%;
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+    gap: 4px;
   }
 
   
@@ -53,8 +53,9 @@ main{
 figure.product-media{
   aspect-ratio: 4 / 5;
   width: 100%;
+  flex-shrink: 0;
   overflow: hidden;
-  border-radius: 10px ;
+  border-radius: 4px;
   margin: 0;
   padding: 0;
   display: flex;
@@ -62,29 +63,23 @@ figure.product-media{
   align-items: center;
   
 }
-.product-image{
-  width: 100%;
-  object-fit: cover;
-  display: block;
-  height: 100%;
-  border: solid 2px #014038;
-} 
+
 
 figure.product-media img {
   width: 100%;
+  height: 100;
   object-fit: cover;
   display: block;
-  height: 100%;
-  border: solid 2px #014038;
+ 
 }
 
 /* Caption styling (optional) */
 figure.product-media figcaption {
   color:  #00231C;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bold;
-  font-family: arial;
-  margin: 4px 1px;
+
+
 }
 
 
@@ -94,6 +89,7 @@ figure.product-media figcaption {
   box-shadow: 0 5px 5px #000; 
   display: flex;
   flex-direction: column;
+  height: 100%;
   margin: 5px; 
   overflow: hidden;
   padding: 2px; 
@@ -114,7 +110,7 @@ figure.product-media figcaption {
   font-size: 20px;
   overflow: hidden;
   transition: max-height 0.4s ease;
- margin-top: 3px;
+  margin-top: 3px;
 
 }
 
@@ -124,9 +120,20 @@ figure.product-media figcaption {
 }
 
 .product-price {
-  margin:0px;
-  font-size: 20px;
+  margin:4px 0px;
+  line-height: 1.2;
+  margin: 4px 0px;
+  font-size: 14px;
   font-weight: bold;
- 
- 
+
+}
+
+.product-name {
+  min-height: 2.4em;
+  font-size: 16px;
+  line-height: 1.2;
+  overflow: hidden;
+  font-weight: bold;
+  color: #00231C;
+  margin: 6px 0 0;
 }
